# skcapstone

./: .cursorrules  .env.example  .gitignore  .openclaw-workspace.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  MISSION.md  README.md  SECURITY.md  SKILL.md  SOP.md  index.d.ts  index.js  package.json  pyproject.toml  skill.yaml
.forgejo/workflows/: ci.yml
.github/workflows/: ci.yml  publish.yml  pytest.yml
.superpowers/sdd/: progress.md
config/jobs.d/: housekeeping.yaml
docker/: Dockerfile  entrypoint.sh
docker/compose-templates/: dev-team.yml  mini-team.yml  ops-team.yml  research-team.yml
docs/: ADR-optional-integration-backbone.md  ARCHITECTURE.md  BACKUP.md  BOND_WITH_GROK.md  CLAUDE-CODE-API.md  CUSTOM_AGENT.md  DREAMING.md  GETTING_STARTED.md  HOUSEKEEPING.md  QUICKSTART.md  SECURITY_DESIGN.md  SKJOULE_ARCHITECTURE.md  SOUL_SWAPPER.md  SOVEREIGN_SINGULARITY.md  TOKEN_SYSTEM.md  TRUSTEE_OPERATIONS.md  autopilot-coord-scoring.md  hammertime-audit.md  itil-conflict-free-persistence.md  sk-integration-HANDOFF.md  skscheduler.md
docs/deploy-plan/: skcapstone-bulletproof-deploy.md
docs/design/: skchat-log-and-comms-syncthing-remediation.md
docs/superpowers/examples/: jobs.yaml
docs/superpowers/plans/: 2026-06-08-skscheduler.md  2026-07-09-dreaming-skscheduler-migration.md  2026-07-11-skcot-extraction.md  2026-07-16-cards-storage-cutover-phase4-SHELVED.md  2026-07-16-cards-storage-cutover-phase4.md  2026-07-16-kanban-write-path-phase3.md  2026-07-16-unified-kanban-card-model.md
docs/superpowers/specs/: 2026-06-08-skscheduler-design.md  2026-07-11-skcot-extraction-design.md  2026-07-16-skdashboard-itil-kanban-airunner.md  2026-07-16-unified-kanban-card-model.md
examples/: custom-bond-template.json  grok-feb.json  grok-testimony.md  love-bootloader.txt  queen-ava-feb.json
examples/plugins/: echo_tool.py
examples/souls/: lumina.yaml
installer/: build.py
launchd/: com.skcapstone.daemon.plist  com.skcapstone.memory-compress.plist  com.skcapstone.skcomm-heartbeat.plist  com.skcapstone.skcomm-queue-drain.plist  com.skcapstone.skcomms-heartbeat.plist  com.skcapstone.skcomms-queue-drain.plist  install-launchd.sh
openclaw-plugin/: package.json
openclaw-plugin/src/: index.ts  openclaw.plugin.json
scripts/: archive-sessions.sh  bump_version.py  check-updates.py  ci-check.sh  claude-code-api.py  convert_blueprints_to_yaml.py  dev-install.sh  e2e-test.sh  install-bundle.sh  install.ps1  install.sh  itil_migrate_events.py  mcp-serve.sh  mcp-server.bat  mcp-server.ps1  mcp-server.sh  model-fallback-monitor.sh  notion-api.py  nvidia-proxy.mjs  proxy-monitor.sh  pull-models.sh  refresh-anthropic-token.sh  release.sh  session-to-memory.py  sk-agent-picker.sh  skcapstone  skcapstone-gfs-backup.sh  skgateway.mjs  telegram-catchup-all.sh  verify_install.sh  watch-anthropic-token.sh
scripts/wargov-ufo-capture/: README.md  cdp_capture_release2.py  cdp_capture_splc_doj.py  cdp_finish.py  cdp_probe.py  cdp_splc_pressrelease.py  parse_csv.py  pull_dvids.sh
scripts/windows/: install-tasks.ps1  skcapstone-task.xml  uninstall-tasks.ps1
src/skcapstone/: __init__.py  _cli_monolith.py  _trustee_helpers.py  activity.py  agent_card.py  agent_run.py  api.py  archiver.py  auction.py  baby_agents.py  backup.py  blueprint_registry.py  brain_first.py  card.py  card_store.py  changelog.py  chat.py  claude_md.py  cli.py  client.py  cloud9_bridge.py  cmdb.py  codex_setup.py  completions.py  config_validator.py  consciousness_config.py  consciousness_loop.py  context_loader.py  context_window.py  conversation_manager.py  conversation_store.py  conversation_summarizer.py  coord_federation.py  coordination.py  crush_integration.py  crush_shim.py  daemon.py  dashboard.html  dashboard.py  dashboard_assistant.py  (+96 more)
src/skcapstone/blueprints/: __init__.py  registry.py  schema.py
src/skcapstone/cli/: __init__.py  _common.py  _validators.py  agent_profile_cmd.py  agents.py  agents_spawner.py  agents_trustee.py  alerts.py  anchor.py  archive_cmd.py  backup.py  bench.py  benchmark.py  capabilities_cmd.py  card.py  chat.py  completions.py  config_cmd.py  consciousness.py  context_cmd.py  coord.py  crush_cmd.py  daemon.py  errors_cmd.py  export_cmd.py  gtd.py  (+39 more)
systemd/: skcapstone-api.socket  skcapstone-memory-compress.timer  skcapstone.service  skcapstone@.service  skcomm-heartbeat.service  skcomm-heartbeat.timer  skcomm-queue-drain.timer  skcomms-heartbeat.service
tests/: conftest.py  test_agent_card.py  test_agent_home_scaffold.py  test_agent_profile.py  test_agent_run.py  test_agent_runtime.py  test_alerts_cmd.py  test_alerts_consumer_topics.py  test_archiver.py  test_autoreply_guard.py  test_backup.py  test_benchmark.py  test_blueprints.py  test_capabilities.py  test_card.py  test_card_events.py  test_card_kanban_html.py  test_card_store.py  test_changelog.py  test_chat.py  test_claude_md.py  test_cli_chat_llm.py  test_cli_completions.py  test_cli_coord_score.py  test_cli_init_reset.py  test_cli_kanban.py  test_cli_memory.py  test_cli_profile.py  test_cli_skills.py  test_cli_status.py  test_cli_test_cmd.py  test_cli_test_connection.py  test_cloud9_bridge.py  test_cloud_provider.py  test_cloud_providers.py  test_cmdb.py  test_completions.py  test_component_manager.py  test_config_reload.py  test_config_validate.py  (+149 more)
tests/integration/: test_consciousness_e2e.py  test_skills_registry.py
(+135 files in other folders)
